# tech-challenge-fase4-final

./: .gitignore  README.md  RULES.md  SKILL.md  destroy-all.ps1  destroy.yml
.github/.specify/: init-options.json  integration.json
.github/.specify/extensions/: .registry
.github/.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.github/.specify/memory/: constitution.md
.github/workflows/: destroy.yml
.qodo/workflows/: deploy.yml
tech-challenger/: README.md
tech-challenger/deploy/: docker-compose.yml
tech-challenger/docs/: arquitetura.md  decisoes.md
tech-challenger/infra/lambda/: build_package.py
tech-challenger/infra/terraform/: main.tf  outputs.tf  terraform.tfvars  tf_validate.json  variables.tf
tech-challenger/messaging/sqs/: queues.md
tech-challenger/services/order-service/: README.md
tech-challenger/shared/: pyproject.toml
tech-challenger/shared/contracts/: __init__.py
tech-challenger/shared/contracts/dto/: __init__.py  analysis_status.py  diagram_upload.py
tech-challenger/shared/contracts/entities/: __init__.py  architecture_diagram.py
tech-challenger/shared/contracts/events/: __init__.py  analysis_requested.py
tech-challenger/shared/libs/: __init__.py
tech-challenger/shared/libs/aws/: __init__.py  exceptions.py  s3_client.py  sns_client.py  sqs_client.py
tech-challenger/shared/libs/llm/: __init__.py  bedrock_client.py  exceptions.py  llm_client.py  sagemaker_client.py
tech-challenger/shared/libs/messaging/: exceptions.py
yolo-model/: Dockerfile  inference.py  package_model.py  requirements.txt
(+125 files in other folders)
