[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tech-challenger-contracts"
version = "1.0.0"
description = "Shared contracts (DTOs, Entities, Events) for Tech-Challenge-fase-4 microservices"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["contracts*"]

[tool.pytest.ini_options]
testpaths = ["../../tests/unit/shared"]
addopts = "--cov=contracts --cov-report=term-missing"

[tool.coverage.run]
source = ["contracts"]
